ドキュメント追加

--- a/docs/環境構築.md
+++ b/docs/環境構築.md
@@ -29,7 +29,7 @@
     - 開発環境の共有がしやすい
     - 不具合が起きたときの再起動・環境の再構築が容易
     - Virtual Machine環境より軽量、立ち上げが容易
-- 学習するだけならブラウザ上のエディター等でも機能は十分
+- また、Reactのロジックを学習するだけならブラウザ上のエディター等でも機能は十分
   - (参考)https://codesandbox.io/s/j67kkz?file=/src/App.js&utm_medium=sandpack
 
 
